2008-08-27  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/types.m4: always include sys/types.h, if it exists,
	  before trying other headers (fixes builds of FreeBSD-4.x); thanks
	  to John Hein <jhein@timing.com>
	* perl/Amanda/MainLoop.swg server-src/driverio.h: include amanda.h
	  before event.h

2008-08-22  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/amglue/bigint.c: add #include "stdint.h"

2008-08-22  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/ps.m4: search multiple ps invocations; thanks
	  to John Hein <jhein@timing.com>

2008-08-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.ci (tape): Correctly print next tape to use.
	* server-src/tapefile.c (print_new_tapes): New function to print new
						   tapes.
	* server-src/tapefile.h (print_new_tapes): Prototype.
	* server-src/reporter.c: Correctly print next tape to use.

2008-08-22  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c common-src/conffile.h perl/Amanda/Config.swg:
	  add new 'define device' config section
	* perl/Makefile.am perl/Amanda/Config/Server.pm
	  perl/Amanda/Config/Server/Devices.pm
	  perl/Amanda/Config/Server/Grammar: ditto
	* device-src/device.c device-src/device.h: configure devices from
	  device definitions, with better error handling
	* device-src/rait-device.c: handle child devices better
	* installcheck/Amanda_Config.pl installcheck/Amanda_Config_Server.pl
	  installcheck/Amanda_Xfer.pl installcheck/Installcheck/Config.pm
	  installcheck/amgetconf.pl: new tests, modifications to work with the
	  new system
	* man/xml-source/amanda-devices.7.xml
	  man/xml-source/amanda.conf.5.xml: corresponding documentation updates
	* perl/Amanda/Changer.pm perl/Amanda/Device.swg
	  restore-src/amrestore.c restore-src/restore.c server-src/amcheck.c
	  server-src/amcheckdump.pl server-src/amdevcheck.pl
	  server-src/amlabel.c server-src/amtape.c server-src/taper.c
	  server-src/taperscan.c: remove calls to